fix: alignment of footer on smaller viewports

--- a/Email Tithe Receipt/frontend/assets/css/main.css
+++ b/Email Tithe Receipt/frontend/assets/css/main.css
@@ -21,20 +21,23 @@ body {
 .banner {
     display: flex;
     flex-direction: row;
-    place-items: center;
-    margin: 0 1rem;
+    align-items: center;
+    justify-content: space-evenly;
+    padding: 0.5rem;
+    /* margin: 0 1rem; */
 }
 
 .banner img {
     width: auto;
-    margin: 0 auto;
+    /* margin: 0 auto; */
     height: 3.75rem;
     filter: saturate(100)
 }
+
 nav span {
     font-size: 1.25rem;
     font-weight: bold;
-    margin: 0 auto;
+    /* margin: 0 auto; */
     text-align: center;
     padding: 1rem;
     text-transform: capitalize;
@@ -85,7 +88,7 @@ footer {
 
 footer p {
     text-align: center;
-    padding: 0 0.5rem 0 0;
+    padding: 0.5rem 0;
 }
 
 .footer__church-details {
@@ -98,10 +101,12 @@ footer p {
 
 .footer__church-details > span {
     font-weight: 500;
+    text-align: center;
+    padding: 0.25rem;
 }
 
 
-@media (width <=  390px) {
+@media (width <=  420px) {
     header h1 {
         font-size: 1.75rem;
     }
@@ -112,7 +117,8 @@ footer p {
         place-items: center;
     }
 
-    .footer__church-details span {
+    .footer__church-details > span {
         margin: 0.0625rem 0;
+        padding: 0.0625rem 0;
     }
 }
